4.2.0
 - feat: new model "power_layer_clifford_2009"
4.1.1
 - fix: incorrect reversion of insertion in sys.path when registering a model
4.1.0
 - ref: move to "src"-rooted source tree
 - ref: move iterative `sneddon_spher` model to separate package which
   makes nanite a pure Python package
4.0.0
 - BREAKING CHANGE: Due to the new imputation of nan-valued features,
   rating inference might change slightly. For the "zef18" dataset,
   inference was off by about 0.1 on average.
 - fix: bad data caused TypeError in numpy.polynomial (#25)
 - enh: impute nan-valued feature data if corresponding response was 0
 - enh: allow empty-valued groups in rating HDF5 file
 - enh: when encountering inf values in a training set, replace them
   with twice the maxium of that feature
3.7.3
 - setup: wrong package setup
3.7.2
 - setup: wrong package setup
3.7.1
 - setup: wrong package setup
3.7.0
 - feat: subtract linear slope from indentation curve (#22)
 - ref: return normalization reference type for details from POC and preproc
 - setup: bump scipy to 1.10.0 due to memory leak vulnerability
3.6.0
 - tests: make tests less strict and some cleanup
 - setup: drop support for Python 3.8 and 3.9
 - setup: bump h5py from 2.8.0 to 3.9.0
 - build: migrate to pyproject.toml
 - ci: use cibuildwheel for releases
3.5.4
 - setup: drop support for Python 3.7
3.5.3
 - setup: bump numpy to 1.22.0
3.5.2
 - build: add wheels for Python up to 3.11
 - ref: fix DeprecationWarnings
 - docs: make docs build on Windows
 - docs: update GH actions badge
 - tests: loosen np.allclose calls
3.5.1
 - docs: minor update
3.5.0
 - feat: allow to specify geometric correction factor k during fit
   (tip position is multiplied by k and contact point is modified
   directly before and after fit)
3.4.0
 - feat: allow to load fitting models from external Python files
 - enh: add method to deregister NaniteFitModels
3.3.1
 - docs: added some clarifications in the model docs