@@ -1,5 +1,6 @@
 4.2.0
  - feat: new model "power_layer_clifford_2009"
+ - ref: migrate from pkg_resources to importlib.resources
 4.1.1
  - fix: incorrect reversion of insertion in sys.path when registering a model
 4.1.0
